--- a/express-mongo/package.json
+++ b/express-mongo/package.json
@@ -17,5 +17,8 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.50.0"
   }
 }
